--- a/pass.html
+++ b/pass.html
@@ -3,6 +3,17 @@
 
 <head>
     <title>Pass a Phrase</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+        integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
+        integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
+        crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -16,7 +27,7 @@
         <label for="form_phrase">Enter a phrase</label>
         <input type="text" id="form_phrase" name="form_phrase" autofocus> <br>
 
-        <input type="button" onclick="processPhrase()" value="Check the phrase">
+        <input type="button" onclick="processPhrase()" value="Check the phrase" id="processButton">
     </form>
 
     <p id="result">This text will be replaced </p>
@@ -40,8 +51,11 @@
             } else {
                 wrong = wrong + 1
                 alert("Access denied")
+                if(wrong >= 2){
+                document.getElementById("processButton").onclick=function(){alert("Access denied")
+                alert("Account Locked")}
+                 }
             }
-
             out = document.getElementById("result")
             out.innerHTML = "Correct Count: " + correct + " ,Wrong Count: " + wrong
 
@@ -61,6 +75,10 @@
                     count = 0
                     break;                    
             }
+        }
+        function pageAlert(){
+            alert("Account is Locked")
+
         }
     </script>
 </body>
