--- a/arithmetic.html
+++ b/arithmetic.html
@@ -3,6 +3,17 @@
 
 <head>
     <title>Arithmetic</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+        integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
+        integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
+        crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -10,13 +21,15 @@
     <h2>Getting input</h2>
 
     <form>
-        <label for="form_base">Enter a base </label>
-        <input type="number" id="form_base" name="form_base" value=10> <br>
-
-        <label for="form_exponent">Enter an exponent </label>
-        <input type="number" id="form_exponent" name="form_exponent" value=2> <br>
-
-        <input type="button" onclick="powers()" value="Compute" style="color: blue;">
+        <div class="form-group" style="width: 25%;">
+        <label for="form_base" class="form-label">Enter a base </label>
+        <input type="number" class="form-control" id="form_base" name="form_base" value=10> <br>
+    </div>
+        <div class="form-group" style="width: 25%;">
+        <label for="form_exponent" class="form-label">Enter an exponent </label>
+        <input type="number" class="form-control" id="form_exponent" name="form_exponent" value=2> <br>
+    </div>
+        <input type="button" class="btn btn-primary" onclick="powers()" value="Compute" >
     </form>
 
 
