--- a/car.html
+++ b/car.html
@@ -3,6 +3,17 @@
 
 <head>
     <title>Car Details</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+        integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
+        integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
+        crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -19,17 +30,20 @@
         <input type="checkbox" id="cb_gps" name="carDetails" value="gps">
         <label for="cb1_onion">gps</label></br>
         <br>
-        <input type="button" onclick="orderCar()" value="Order a car" style="color: blue;">
+        <input type="button" class="btn btn-primary" onclick="orderCar()" value="Order a car" >
       </form>
       <br>
     <form>
-        <label for="form_property">Enter a property</label>
-        <input type="text" id="form_property" name="form_property" value="color">
+        <div class="form-group" style="width: 25%;">
+        <label for="form_property" class="form-label">Enter a property</label>
+        <input type="text" class="form-control" id="form_property" name="form_property" value="color">
+    </div>
         <br>
-        <label for="form_value">Enter a value</label>
-        <input type="text" id="form_value" name="form_value" autofocus> <br>
-
-        <input type="button" onclick="updateCar()" value="Update the car" style="color: blue;">
+        <div class="form-group" style="width: 25%;">
+        <label for="form_value" class="form-label">Enter a value</label>
+        <input type="text" class="form-control" id="form_value" name="form_value" autofocus> <br>
+    </div>
+        <input type="button" class="btn btn-primary" onclick="updateCar()" value="Update the car" >
     </form>
 
     <p id="left">This text will be replaced </p>
