--- a/car.html
+++ b/car.html
@@ -21,15 +21,21 @@
     <h2>Getting input</h2>
 
     <form>
-        <input type="checkbox" id="cb_electric" name="carDetails" value="electric">
-        <label for="cb1_cheese">electric</label></br>
+        <div class="form-check">
+        <input type="checkbox" class="form-check-input" id="cb_electric" name="carDetails" value="electric">
+        <label for="cb1_cheese" class="form-check-label">electric</label></br>
+    </div>
+    <div class="form-check">
       
-        <input type="checkbox" id="cb_ac" name="carDetails" value="ac">
-        <label for="cb1_olive">ac</label></br>
+        <input type="checkbox" class="form-check-input" id="cb_ac" name="carDetails" value="ac">
+        <label for="cb1_olive" class="form-check-label">ac</label></br>
+        </div>
+        <div class="form-check">
       
-        <input type="checkbox" id="cb_gps" name="carDetails" value="gps">
-        <label for="cb1_onion">gps</label></br>
+        <input type="checkbox" class="form-check-input" id="cb_gps" name="carDetails" value="gps">
+        <label for="cb1_onion" class="form-check-label">gps</label></br>
         <br>
+        </div>
         <input type="button" class="btn btn-primary" onclick="orderCar()" value="Order a car" >
       </form>
       <br>
