Adding bootstrap Styling for Images,header,heading and Paragraph V1.  4

--- a/arithmetic.html
+++ b/arithmetic.html
@@ -14,6 +14,19 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
         integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
         crossorigin="anonymous"></script>
+        <style>
+            header{
+                color: yellowgreen;
+                background-color: indigo;
+            }
+            h2{
+                background-color: slateblue;
+                color: tan;
+            }
+            p{
+                color: red;
+            }
+        </style>
 </head>
 
 <body>
@@ -56,7 +69,7 @@
         <label for="rg1_divide" class="form-check-label">/</label></br>
         </div>
     </form>
-
+    <br>
     <p id="left">This text will be replaced </p>
     <br>
 
