--- a/car.html
+++ b/car.html
@@ -14,6 +14,19 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
         integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
         crossorigin="anonymous"></script>
+        <style>
+            header{
+                color: yellowgreen;
+                background-color: indigo;
+            }
+            h2{
+                background-color: slateblue;
+                color: tan;
+            }
+            p{
+                color: red;
+            }
+        </style>
 </head>
 
 <body>
@@ -51,7 +64,7 @@
     </div>
         <input type="button" class="btn btn-primary" onclick="updateCar()" value="Update the car" >
     </form>
-
+    <br>
     <p id="left">This text will be replaced </p>
     <br>
     <script>
