--- a/pass.html
+++ b/pass.html
@@ -14,6 +14,19 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
         integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
         crossorigin="anonymous"></script>
+        <style>
+            header{
+                color: yellowgreen;
+                background-color: indigo;
+            }
+            h2{
+                background-color: slateblue;
+                color: tan;
+            }
+            p{
+                color: red;
+            }
+        </style>
 </head>
 
 <body>
@@ -33,11 +46,12 @@
 
         <input type="button" onclick="processPhrase()" value="Check the phrase" id="processButton" class="btn btn-primary">
     </form>
-
-    <p id="result">This text will be replaced </p>
+    <br>
+    <p id="result" >This text will be replaced </p>
+    <br>
 
     <div class="container">
-        <img src="images/Ape.jpg" alt="Ape" onclick="newImage();" id="images" style="width: 200; height: 200;">
+        <img src="images/Ape.jpg" class="img-thumbnail" alt="Ape" onclick="newImage();" id="images" style="width: 200; height: 200;">
     </div>
 
     <script>
